OPHJOD-1468: Fix Sonar warning